Fix list-footer z-index

--- a/app/assets/stylesheets/ratings.css.scss
+++ b/app/assets/stylesheets/ratings.css.scss
@@ -82,6 +82,7 @@ nav#cbp-spmenu-s1 {
 #list-footer {
 	height: auto;
 	padding: 1%;
+	z-index: 500;
 }
 
 #ebutton{
